fixed z-index bug on new actor

--- a/app/styles/_controls.styl
+++ b/app/styles/_controls.styl
@@ -60,6 +60,7 @@
   display box
   box-pack center
   position absolute
+  z-index 4
   box-shadow 0 1px rgba(0,0,0,.08)
   .newActor  
     height 50px
