--- a/app/styles/_navigation.styl
+++ b/app/styles/_navigation.styl
@@ -3,6 +3,7 @@
   background none
   border none
   box-shadow none
+  z-index 5
   > *
     height 50px
     padding 14px 13px
